# robot-planning-project

./: README.md
collisions/: CMakeLists.txt  package.xml
collisions/include/collisions/: collisions.hpp
collisions/src/: collisions.cpp
collisions/test/: circle.cpp  main.cpp  polygon.cpp  segment.cpp
communication/custom_msgs/: CMakeLists.txt
communication/obstacles_msgs/: CMakeLists.txt
communication/obstacles_msgs/msg/: ObstacleArrayMsg.msg
communication/shelfino/: CMakeLists.txt  package.xml  pubs_simulation.sh
communication/shelfino/include/shelfino/: shelfino.hpp
communication/shelfino/src/: follow_client.cpp  gates.cpp  main.cpp  obstacles.cpp  path.cpp  pose.cpp  roadmap.cpp  walls.cpp
cpp_pubsub/: CMakeLists.txt  package.xml
cpp_pubsub/msg/: CustomPath.msg
cpp_pubsub/src/: publisher.cpp  subscriber.cpp
decisions/: CMakeLists.txt
decisions/include/decisions/: decisions.hpp
decisions/src/: decisions.cpp
disegnino/: README.md  main.py  map.json  moves.json
dubins/: CMakeLists.txt  package.xml
dubins/include/dubins/: dubins.hpp
dubins/src/: dubins.cpp
dubins/test/: collisions.cpp  performance.cpp
install/: local_setup.sh  setup.sh
install/custom_msgs/include/custom_msgs/custom_msgs/msg/: edges.h  obstacle_array_msg.hpp  obstacle_msg.h
install/custom_msgs/include/custom_msgs/custom_msgs/msg/detail/: edges__functions.c  edges__rosidl_typesupport_fastrtps_cpp.hpp  edges__rosidl_typesupport_introspection_c.h  edges__traits.hpp  geometry_graph__functions.c  geometry_graph__functions.h  geometry_graph__rosidl_typesupport_introspection_c.h  geometry_graph__rosidl_typesupport_introspection_cpp.hpp  geometry_graph__traits.hpp  geometry_graph__type_support.cpp  geometry_graph__type_support.h  obstacle_array_msg__builder.hpp  obstacle_array_msg__rosidl_typesupport_fastrtps_cpp.hpp  obstacle_array_msg__rosidl_typesupport_introspection_c.h  obstacle_array_msg__rosidl_typesupport_introspection_cpp.hpp  obstacle_array_msg__struct.hpp  obstacle_array_msg__traits.hpp  obstacle_array_msg__type_support.c  obstacle_array_msg__type_support.h  obstacle_msg__builder.hpp  obstacle_msg__rosidl_typesupport_fastrtps_cpp.hpp  obstacle_msg__rosidl_typesupport_introspection_c.h  obstacle_msg__struct.hpp  obstacle_msg__traits.hpp  obstacle_msg__type_support.cpp
install/custom_msgs/local/lib/python3.10/dist-packages/custom_msgs/: _custom_msgs_s.ep.rosidl_typesupport_fastrtps_c.c
install/custom_msgs/local/lib/python3.10/dist-packages/custom_msgs-0.1.2-py3.10.egg-info/: PKG-INFO
install/custom_msgs/local/lib/python3.10/dist-packages/custom_msgs/msg/: _edges.py  _geometry_graph.py  _obstacle_msg.py
install/custom_msgs/share/ament_index/resource_index/parent_prefix_path/: custom_msgs
install/custom_msgs/share/custom_msgs/: package.sh
install/custom_msgs/share/custom_msgs/cmake/: custom_msgs__rosidl_typesupport_cppExport.cmake  custom_msgs__rosidl_typesupport_introspection_cExport.cmake  export_custom_msgs__rosidl_generator_cExport.cmake  export_custom_msgs__rosidl_typesupport_fastrtps_cExport.cmake  export_custom_msgs__rosidl_typesupport_fastrtps_cppExport.cmake
install/custom_msgs/share/custom_msgs/msg/: Edges.idl  GeometryGraph.idl  ObstacleArrayMsg.idl  ObstacleMsg.idl
install/decisions/share/decisions/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/decisions/share/decisions/cmake/: ament_cmake_export_targets-extras.cmake
install/dubins/include/dubins/: dubins.hpp
install/dubins/lib/dubins/: test_dubins
install/dubins/share/ament_index/resource_index/parent_prefix_path/: dubins
install/dubins/share/dubins/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/dubins/share/dubins/cmake/: ament_cmake_export_targets-extras.cmake
install/map/share/map/: local_setup.sh  package.bash  package.sh  package.zsh
install/map/share/map/cmake/: mapConfig.cmake
install/shapes/include/shapes/: shapes.hpp
install/shapes/lib/shapes/: test_shapes
install/shapes/share/ament_index/resource_index/parent_prefix_path/: shapes
install/shapes/share/shapes/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/shapes/share/shapes/cmake/: shapesConfig.cmake  shapesExport-noconfig.cmake  shapesExport.cmake
install/shelfino/share/ament_index/resource_index/parent_prefix_path/: shelfino
install/shelfino/share/shelfino/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/shelfino/share/shelfino/cmake/: shelfinoConfig.cmake
install/utils/include/utils/: utils.h
install/utils/share/ament_index/resource_index/parent_prefix_path/: utils
install/utils/share/utils/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/utils/share/utils/cmake/: utilsExport-noconfig.cmake
lib_dubins/: CMakeLists.txt
lib_dubins/include/lib_dubins/: dubins.h
lib_dubins/src/: dubins.cpp
log/: latest_build  latest_test
main_tester/src/: main_tester.cpp
map/: CMakeLists.txt
map/include/map/: map.hpp
map/src/: map.cpp
map/test/: main.cpp  performance.cpp
navigation/: package.xml  pubs_simulation.sh
navigation/src/: follow_client.cpp  gates.cpp  pose.cpp  roadmap.cpp  walls.cpp
path_solver/: CMakeLists.txt  package.xml
path_solver/include/path_solver/: path_solver.h
path_solver/src/: path_solver.cpp
shapes/: CMakeLists.txt
shapes/include/shapes/: shapes.hpp
shapes/src/: shapes.cpp
shapes/test/: circle.cpp  performace.cpp  performance.cpp  polygon.cpp  segment.cpp
shelfino_communication/: CMakeLists.txt  package.xml
shelfino_communication/msg/: ObstacleArrayMsg.msg  ObstacleMsg.msg
tools/disegnino/: README.md
utils/: package.xml
utils/include/utils/: utils.h
utils/src/: utils.cpp
