<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>navigation</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="federico.pezzato.work@gmail.com">root</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <depend>shapes</depend>
  <depend>obstacles_msgs</depend>
  <depend>graph_msgs</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
